# platypus

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/gui/: app.rs  mod.rs
