[package]
name = "platypus"
version = "0.2.0"
edition = "2024"
description = "PostgreSQL database GUI explorer."
authors = ["wedkarz02"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/wedkarz02/platypus"
keywords = ["gui", "postgresql"]
categories = ["database", "visualization"]
exclude = ["/.github/*"]

[dependencies]
eframe = "0.33.2"
