[package]
name = "platypus"
version = "0.2.0"
edition = "2024"
description = "PostgreSQL database GUI explorer."
authors = ["wedkarz02"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/wedkarz02/platypus"
keywords = ["gui", "postgresql"]
categories = ["database", "visualization"]
exclude = ["/.github/*"]

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
log = "0.4.27"
env_logger = "0.11.8"

